# Personal-Digital-Time-Machine

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-workspace.yaml
.github/workflows/: deploy.yml
backend/: requirements.txt
backend/app/: main.py
backend/app/core/: config.py  container.py
backend/app/domain/: base.py  events.py
backend/app/infrastructure/agents/: creative_agent.py  decision_agent.py  embedding_agent.py  evolution_agent.py  graph_agent.py  ocr_agent.py  prediction_agent.py  privacy_agent.py  reflection_agent.py  research_agent.py
backend/app/infrastructure/cache/: redis_client.py
backend/app/infrastructure/database/: event_store.py  models.py  postgres.py  projections.py
backend/app/infrastructure/graph/: neo4j_client.py
backend/app/infrastructure/recorder/: recorder.py
backend/app/infrastructure/search/: qdrant_client.py  tantivy_client.py
backend/tests/: conftest.py  test_agents.py  test_core.py  test_graph.py  test_search.py  test_timeline.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/analytics/: AnalyticsReflections.tsx
frontend/src/components/creative/: CreativeProjects.tsx
frontend/src/components/graph/: GraphExplorer.tsx
frontend/src/components/predictions/: PredictionsEvolution.tsx
frontend/src/hooks/: useTimeline.ts
frontend/src/store/: useStore.ts
scripts/: setup.ps1  setup.sh
(+7 files in other folders)
