[package]
name = "chrona-ai"
version = "1.0.0"
description = "ChronaAI - Personal Digital Time Machine Desktop"
authors = ["Vijay <vijay@chrona.ai>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = ["shell-open", "api-all"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
portable-pty = "0.8" # For potential CLI integrations in later phases
